# advent-of-code-2025

./: CMakeLists.txt
1/: data.txt  main.cpp
2/: main.cpp
3/: main.cpp
4/: main.cpp
5/: main.cpp
utils/: fast-io.hpp
